chore: add prompt confirmation

--- a/.github/workflows/eraser.yml
+++ b/.github/workflows/eraser.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Deploy Infrastructure
         shell: bash
         run: |
-            az group delete -n icmelrg
+            az group delete -n icmelrg --yes
