--- a/.github/workflows/pwsh-test.yml
+++ b/.github/workflows/pwsh-test.yml
@@ -23,8 +23,13 @@ jobs:
           Get-Module -Name Az
 
       - name: Connecting pwsh 
+        env: 
+          USERNAME: ${{ secrets.AZURE_CLIENT_ID }}
+          PASSWORD: ${{ secrets.AZ_CLIENT_SECRET }}
         shell: pwsh
         run: |
-          $securePassword = ConvertTo-SecureString ${{ secrets.AZ_CLIENT_SECRET }} -AsPlainText -Force
-          $psCredential = New-Object System.Management.Automation.PSCredential(${{ secrets.AZURE_CLIENT_ID }}, $securePassword)
+          $clientId = $env:USERNAME
+          $clientSecret = $env:PASSWORD
+          $securePassword = ConvertTo-SecureString -String $clientSecret -AsPlainText -Force
+          $psCredential = New-Object System.Management.Automation.PSCredential($clientId, $securePassword)
           Connect-AzAccount -ServicePrincipal -Credential $psCredential -Tenant ${{ secrets.AZURE_TENANT_ID }} -SubscriptionId $subscriptionId
