--- a/.github/workflows/pwsh-test.yml
+++ b/.github/workflows/pwsh-test.yml
@@ -32,4 +32,4 @@ jobs:
           $clientSecret = $env:PASSWORD
           $securePassword = ConvertTo-SecureString -String $clientSecret -AsPlainText -Force
           $psCredential = New-Object System.Management.Automation.PSCredential($clientId, $securePassword)
-          Connect-AzAccount -ServicePrincipal -Credential $psCredential -Tenant ${{ secrets.AZURE_TENANT_ID }} -SubscriptionId $subscriptionId
+          Connect-AzAccount -ServicePrincipal -Credential $psCredential -Tenant ${{ secrets.AZURE_TENANT_ID }} -SubscriptionId 'c550fb2d-3f43-40b7-9e36-f1d47f436e42'
