--- a/.github/workflows/pwsh-test.yml
+++ b/.github/workflows/pwsh-test.yml
@@ -55,3 +55,19 @@ jobs:
             
             Set-AzFirewallPolicyRuleCollectionGroup -Name "NetworkRuleCollectionGroup" -Priority "200" -FirewallPolicyObject $firewallpolicy -RuleCollection $networkrulecollectiongroup.Properties.RuleCollection
     
+      - name: Create Az VHub on the WAN and configure spoke connections
+        shell: pwsh
+        run: |
+            $Hub = New-AzVirtualHub -Name $HubName -ResourceGroupName $resource_group -VirtualWan $Vwan -Location $Location -AddressPrefix "192.168.1.0/24" -Sku "Standard"
+
+            $Spoke0 = Get-AzVirtualNetwork -ResourceGroupName $resource_group -n icvnet0 
+            $Spoke1 = Get-AzVirtualNetwork -ResourceGroupName $resource_group -n icvnet1
+            $Spoke2 = Get-AzVirtualNetwork -ResourceGroupName $resource_group -n icnetappvnet
+            
+            
+            # Connect Virtual Network to Virtual WAN
+            $Spoke0Connection = New-AzVirtualHubVnetConnection -ResourceGroupName $resource_group -ParentResourceName  $HubName -Name "spoke0" -RemoteVirtualNetwork $Spoke0 -EnableInternetSecurityFlag $True
+            
+            $Spoke1Connection = New-AzVirtualHubVnetConnection -ResourceGroupName $resource_group -ParentResourceName  $HubName -Name "spoke1" -RemoteVirtualNetwork $Spoke1 -EnableInternetSecurityFlag $True
+            
+            $Spoke2Connection = New-AzVirtualHubVnetConnection -ResourceGroupName $resource_group -ParentResourceName  $HubName -Name "spoke2" -RemoteVirtualNetwork $Spoke2 -EnableInternetSecurityFlag $True
