--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -2,6 +2,29 @@ name: Infrastructure deployment
 on:
   workflow_dispatch:
 jobs:
+  create-rg:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Azure Custom Login
+        shell: bash
+        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
+      - name: Deploy resource group
+        shell: bash
+        run: az network vwan create --name icmelwan --resource-group icmelrg --location eastus --type "Standard"          
+  deploy-virtualhub:
+    needs: create-rg
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Azure Custom Login
+        shell: bash
+        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
+      - name: Deploy VWAN o sub
+        shell: bash
+        run: az network vwan create --name icmelwan --resource-group icmelrg --location eastus --type "Standard"          
   deploy-infrastructure:
     runs-on: ubuntu-latest
     steps:
@@ -12,10 +35,7 @@ jobs:
         run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
       - name: Deploy Infrastructure
         shell: bash
-        run: |
-          resource_group='icmelrg'
-          # -- Resource Group --
-          az group create -n $resource_group --location eastus          
+        run: |        
           # -- Virtual Networks --           
           az network vnet create -g $resource_group -n icvnet0 --address-prefix 10.0.0.0/16 --subnet-name icvnet0_sub --subnet-prefixes '10.0.0.0/24'          
           az network vnet create -g $resource_group -n icvnet1 --address-prefix 10.1.0.0/16 --subnet-name icvnet1_sub --subnet-prefixes '10.1.0.0/24'          
@@ -27,7 +47,6 @@ jobs:
           az vm create -n icnetapp -g $resource_group --image Ubuntu2204 --vnet-name icnetappvnet --subnet icnetappvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
           az vm create -n iconprem -g $resource_group --image Ubuntu2204 --vnet-name iconpremvnet --subnet iconpremvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
           # -- Virtual WAN --          
-          az network vwan create --name icmelwan --resource-group $resource_group --location eastus --type "Standard"          
           # Create the policy and the securehub from the protal
       - name: Installing pwsh module
         shell: pwsh
