feat: implement concurrecny for deploy infrastructure job and separed pwsh related job

--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Deploy VWAN o sub
         shell: bash
         run: az network vwan create --name icmelwan --resource-group icmelrg --location eastus --type "Standard"          
-  deploy-infrastructure:
+  deploy-pwsh:
     needs: create-rg
     runs-on: ubuntu-latest
     steps:
@@ -35,22 +35,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Azure Custom Login
         shell: bash
-        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
-      - name: Deploy Infrastructure
-        shell: bash
-        run: |        
-          # -- Virtual Networks --           
-          az network vnet create -g $RESOURCE_GROUP -n icvnet0 --address-prefix 10.0.0.0/16 --subnet-name icvnet0_sub --subnet-prefixes '10.0.0.0/24'          
-          az network vnet create -g $RESOURCE_GROUP -n icvnet1 --address-prefix 10.1.0.0/16 --subnet-name icvnet1_sub --subnet-prefixes '10.1.0.0/24'          
-          az network vnet create -g $RESOURCE_GROUP -n icnetappvnet --address-prefix 10.4.0.0/16 --subnet-name icnetappvnet_sub --subnet-prefixes '10.4.0.0/24'          
-          az network vnet create -g $RESOURCE_GROUP -n iconpremvnet --address-prefix 10.5.0.0/16 --subnet-name iconpremvnet_sub --subnet-prefixes '10.5.0.0/24'          
-          # -- Virtual Machines         
-          az vm create -n icmel0 -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvnet0 --subnet icvnet0_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
-          az vm create -n icmel1 -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvnet1 --subnet icvnet1_sub --admin-username azureuser --generate-ssh-keys --output json --verbose         
-          az vm create -n icnetapp -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icnetappvnet --subnet icnetappvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
-          az vm create -n iconprem -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name iconpremvnet --subnet iconpremvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
-          # -- Virtual WAN --          
-          # Create the policy and the securehub from the protal
+        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}               
       - name: Installing pwsh module
         shell: pwsh
         run: |
@@ -102,3 +87,25 @@ jobs:
             Add-AzVirtualNetworkPeering -Name "peering-netapp-to-onprem" -VirtualNetwork $Spoke2 -RemoteVirtualNetworkId $OnPrem.Id -AllowForwardedTraffic 
             Add-AzVirtualNetworkPeering -Name "peering-onprem-to-netapp" -VirtualNetwork $OnPrem -RemoteVirtualNetworkId $Spoke2.Id -AllowForwardedTraffic 
 
+  deploy-infrastructure:
+    needs: create-rg
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+    - name: Azure Custom Login
+      shell: bash
+      run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}    
+    - name: Deploy Infrastructure
+      shell: bash
+      run: |        
+        # -- Virtual Networks --           
+        az network vnet create -g $RESOURCE_GROUP -n icvnet0 --address-prefix 10.0.0.0/16 --subnet-name icvnet0_sub --subnet-prefixes '10.0.0.0/24'          
+        az network vnet create -g $RESOURCE_GROUP -n icvnet1 --address-prefix 10.1.0.0/16 --subnet-name icvnet1_sub --subnet-prefixes '10.1.0.0/24'          
+        az network vnet create -g $RESOURCE_GROUP -n icnetappvnet --address-prefix 10.4.0.0/16 --subnet-name icnetappvnet_sub --subnet-prefixes '10.4.0.0/24'          
+        az network vnet create -g $RESOURCE_GROUP -n iconpremvnet --address-prefix 10.5.0.0/16 --subnet-name iconpremvnet_sub --subnet-prefixes '10.5.0.0/24'          
+        # -- Virtual Machines         
+        az vm create -n icmel0 -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvnet0 --subnet icvnet0_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
+        az vm create -n icmel1 -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvnet1 --subnet icvnet1_sub --admin-username azureuser --generate-ssh-keys --output json --verbose         
+        az vm create -n icnetapp -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icnetappvnet --subnet icnetappvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose          
+        az vm create -n iconprem -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name iconpremvnet --subnet iconpremvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose   
