feat: add powershell deploying module job in container

--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -30,6 +30,8 @@ jobs:
   deploy-pwsh:
     needs: create-rg
     runs-on: ubuntu-latest
+    container:
+      image: fexbi/pwsh-az:0.1
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
